第四次实验课

--- a/lab1027/python_base3.ipynb
+++ b/lab1027/python_base3.ipynb
@@ -542,13 +542,13 @@
     }
    ],
    "source": [
-    "##### start of Listing 4.17 ##### \n",
-    "import tescalender\n",
-    "y, m, d = 2025, 10, 18\n",
-    "n = (tescalender.get_m01_in_week(y, m) + d - 1) % 7\n",
-    "dw = \"Sun Mon Tue Wed Thu Fri Sat\"\n",
-    "print(dw[4*n:4*n+4])  \n",
-    "##### end of Listing 4.17 ##### \n"
+    "# ##### start of Listing 4.17 ##### \n",
+    "# # import tescalender\n",
+    "# y, m, d = 2025, 10, 18\n",
+    "# # n = (tescalender.get_m01_in_week(y, m) + d - 1) % 7\n",
+    "# dw = \"Sun Mon Tue Wed Thu Fri Sat\"\n",
+    "# print(dw[4*n:4*n+4])  \n",
+    "# ##### end of Listing 4.17 ##### \n"
    ]
   },
   {
@@ -583,7 +583,7 @@
     }
    ],
    "source": [
-    "run tescalender.py --year 2025 --month 10"
+    "# run tescalender.py --year 2025 --month 10"
    ]
   },
   {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "ece9f29c",
    "metadata": {},
    "outputs": [
@@ -712,10 +712,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "a43c09f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: ipykernel_launcher.py [-h] [--op OP] [--x X] [--y Y]\n",
+      "ipykernel_launcher.py: error: unrecognized arguments: --f=c:\\Users\\20414\\AppData\\Roaming\\jupyter\\runtime\\kernel-v32e28472ef3a780ead85167ea285b13a3a3eeb096.json\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\20414\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\IPython\\core\\interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "##### start of Listing 4.22 ##### \n",
     "\"\"\"\n",
@@ -819,6 +845,37 @@
     "        f = {'add':add, 'sub':sub, 'mul':mul, 'div':div}\n",
     "        output(f[op](x, y))\n",
     "##### end of Listing 4.22 ##### "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57aee29f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "05bb9ae0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2', '3']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s='(2/3)'\n",
+    "s = s.strip().strip('()')\n",
+    "parts = s.split('/')\n",
+    "n = int(parts[0])\n",
+    "d = int(parts[1])\n",
+    "print(parts)"
    ]
   }
  ],
