--- a/lab1027/python_base3.ipynb
+++ b/lab1027/python_base3.ipynb
@@ -191,24 +191,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "5bf733d2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['dog', 'elephant', 'goat', 'penguin', 'rabbit', 'tiger']"
+       "['dog', 'elephant', 'goat', 'penguin', 'rabbit', 'tiger', 'time']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "animals = [\"elephant\", \"tiger\", \"rabbit\", \"goat\", \"dog\",\n",
-    "                  \"penguin\"]\n",
+    "                  \"penguin\",\"time\"]\n",
     "sorted(animals)"
    ]
   },
