--- a/lab1103/python_base4_jiangjie.ipynb
+++ b/lab1103/python_base4_jiangjie.ipynb
@@ -644,35 +644,35 @@
     "            b -= a\n",
     "    return a\n",
     "\n",
-    "class Rational:\n",
-    "    def __init__(self, n=0, d=1):  \n",
-    "        _nu = n; _de = d\n",
-    "        self.__dict__['nu'] = _nu; self.__dict__['de'] = _de\n",
+    "# class Rational:\n",
+    "#     def __init__(self, n=0, d=1):  \n",
+    "#         _nu = n; _de = d\n",
+    "#         self.__dict__['nu'] = _nu; self.__dict__['de'] = _de\n",
     "\n",
-    "    def __setattr__(self, name, value):\n",
-    "        raise TypeError('Error: Rational objects are immutable')\n",
+    "#     def __setattr__(self, name, value):\n",
+    "#         raise TypeError('Error: Rational objects are immutable')\n",
     "\n",
-    "    def __str__(self): return '%d/%d' % (self.nu, self.de)\n",
+    "#     def __str__(self): return '%d/%d' % (self.nu, self.de)\n",
     "\n",
-    "    def __add__(self, other):  \n",
+    "#     def __add__(self, other):  \n",
     "\n",
-    "    def __sub__(self, other):  \n",
+    "#     def __sub__(self, other):  \n",
     "\n",
-    "    def __mul__(self, other):  \n",
+    "#     def __mul__(self, other):  \n",
     "\n",
-    "    def __truediv__(self, other):  \n",
+    "#     def __truediv__(self, other):  \n",
     "\n",
-    "    def __eq__(self, other):  \n",
+    "#     def __eq__(self, other):  \n",
     "\n",
-    "    def __ne__(self, other):  \n",
+    "#     def __ne__(self, other):  \n",
     "\n",
-    "    def __gt__(self, other):  \n",
+    "#     def __gt__(self, other):  \n",
     "\n",
-    "    def __lt__(self, other):  \n",
+    "#     def __lt__(self, other):  \n",
     "\n",
-    "    def __ge__(self, other):  \n",
+    "#     def __ge__(self, other):  \n",
     "\n",
-    "    def __le__(self, other):  \n",
+    "#     def __le__(self, other):  \n",
     "\n",
     "def test():\n",
     "    testsuite = [\n",
@@ -728,21 +728,21 @@
     "\n",
     "    def integrate(self, f):  \n",
     "\n",
-    "class Trapezoidal(Integrator):\n",
-    "    def compute_points(self):  \n",
+    "# class Trapezoidal(Integrator):\n",
+    "#     def compute_points(self):  \n",
     "\n",
-    "class Simpson(Integrator):\n",
-    "    def compute_points(self):  \n",
+    "# class Simpson(Integrator):\n",
+    "#     def compute_points(self):  \n",
     "\n",
-    "class GaussLegendre(Integrator):\n",
-    "    def compute_points(self):  \n",
+    "# class GaussLegendre(Integrator):\n",
+    "#     def compute_points(self):  \n",
     "\n",
-    "def test():\n",
-    "    def f(x): return (x * math.cos(x) + math.sin(x)) * \\\n",
-    "                      math.exp(x * math.sin(x))\n",
-    "    def F(x): return math.exp(x * math.sin(x))\n",
+    "# def test():\n",
+    "#     def f(x): return (x * math.cos(x) + math.sin(x)) * \\\n",
+    "#                       math.exp(x * math.sin(x))\n",
+    "#     def F(x): return math.exp(x * math.sin(x))\n",
     "\n",
-    "    a = 2; b = 3; n = 200\n",
+    "#     a = 2; b = 3; n = 200\n",
     "    I_exact = F(b) - F(a)\n",
     "    tol = 1E-3\n",
     "\n",
